--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,16 +12,22 @@
 nav {
     background-color: darkblue;
     padding: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
 }
 
 nav a {
     color: white;
     display: block;
     padding: 20px;
+    text-decoration: none;
 }
 
 h1 {
     color: var(--heading-text-color);
+    border-bottom: 2px solid black;
 }
 
 main img {
@@ -39,18 +45,7 @@ main p {
     width: 400px;
 }
 
-main {
-    max-width: 840px;
-}
 
-aside {
-    width: 400px;
-    margin: auto;
-    border: 1px solid rgb(0 0 0 / 0.2);
-    padding: 1.5px;
-    text-align: center;
-    position: relative;
-}
 
 aside h2 {
     position: absolute;
@@ -61,6 +56,12 @@ aside h2 {
 aside img {
     width: 200px;
     height: auto;
+}
+
+header, .grid, footer{
+    max-width: 840px;
+    margin: 0 auto;
+
 }
 
 footer {
@@ -78,3 +79,28 @@ footer {
     color: var(--heading-text-color);
 
 }
+
+.grid{
+    display: grid;
+    /* grid-template-columns: 1fr 1fr; */
+    align-items: center;
+}
+main {
+    max-width: 840px;
+    grid-column: 2/3;
+    margin:1rem
+}
+
+aside {
+    width: 400px;
+    margin: auto;
+    border: 1px solid rgb(0 0 0 / 0.2);
+    padding: 1.5px;
+    text-align: center;
+    position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+
+
+
