--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -7,10 +7,53 @@
     --body-font: "Poetsen One", sans-serif;
 }
 
-header{
+header {
     background-color: var(--primary-color);
-    background-color: transparent;
+    /* background-color: transparent; */
     color: var(--accent2-color);
+    /* display: grid;
+    grid-template-columns: 210px 1fr; */
+    /* grid-gap: 30px; */
+    padding: 0.5rem;
+    max-width: 1000px;
+    align-items: center;
+    border: 2px solid black;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+
+
+}
+
+header img {
+    margin: 0 0.25rem 0 1rem;
+    width: 80px;
+    height: auto;
+    /* align-self: flex-end; */
+
+
+}
+
+.navigation {
+    display: flex;
+    flex-wrap: wrap;
+    /* justify-content: center; */
+    /* align-items: center; */
+    font-family: Arial, sans-serif;
+    flex-direction: row;
+
+}
+
+.navigation a {
+    display: block;
+    color: navy;
+    padding: 10px;
+    text-decoration: none;
+    font-size: 1rem;
+    border: 1px solid black;
+    background-color: white;
+
+
 }
 
 * {
@@ -19,29 +62,34 @@ header{
     box-sizing: border-box;
 }
 
-body{
+body {
     font-family: var(--body-font);
     color: var(--accent1-color);
+
 }
 
-header, main, footer {
+header,
+main,
+footer {
     width: 840px;
     margin: 0 auto;
 }
 
-h1, h2 {
+h1,
+h2 {
     font-family: var(--heading-font);
     color: var(--primary-color);
 }
 
-nav, p, section, article {
+nav,
+p,
+section,
+article {
     margin: 16px;
     padding: 8px;
 }
 
-.socialmedia a {
-    text-decoration: none;
-}
+
 
 .hero {
     position: relative;
@@ -69,10 +117,117 @@ article {
     top: 280px;
     background-color: rgba(43, 61, 226, 0.295);
     color: #ffff;
-    
+
 }
 
-.hero article img{
+.hero article img {
     float: right;
     width: 140px;
+}
+
+.flex {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    border: 1px solid black;
+    width: 800px;
+    /* padding: 0.5rem; */
+    max-width: 1000px;
+    /* align-items: center; */
+
+}
+
+.flex h2 {
+    grid-column: 1 / -1;
+    /* Make H2 span all columns */
+    text-align: center;
+    margin-bottom: 10px;
+    margin-top: 15px;
+}
+
+.flex img {
+    width: 200px;
+    grid-column: 2/3;
+    /* Place in the second (middle) column */
+    display: block;
+    /* justify-self: center; */
+    align-self: center;
+}
+
+.flex p {
+    color: black;
+    align-self: center;
+}
+
+.flex p:nth-of-type(2) {
+    /* Selects the second paragraph */
+    grid-column: 3 / 4;
+    /* Place in the third column */
+
+}
+
+.adventure {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    border: 1px solid black;
+    max-width: 1000px;
+    margin: 20px auto;
+    padding: 20px;
+}
+
+.adventure h2 {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.adventure img {
+    display: block;
+    max-width: 150px;
+    height: auto;
+    margin-bottom: 0;
+
+}
+
+.adventure p {
+    align-content: center;
+    color: black;
+
+}
+
+.last {
+    border: 1px solid black;
+    height: 80px;
+    background-color: var(--primary-color);
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    justify-content: center;
+
+}
+
+.last p {
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 0;
+    color: black;
+    font-family: 'Times New Roman', Times, serif;
+    font-style: oblique;
+    font-weight: bold;
+    font-size: smaller;
+    align-self: center;
+
+}
+
+.socialmedia a {
+    text-decoration: none;
+    text-align: right;
+    margin-top: 0;
+    margin-bottom: 10px;
+    padding: 1px;
+    align-self: flex-end;
+    /* border: 1px solid black; */
+
+
 }
