--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -101,7 +101,7 @@ article {
     height: auto;
 }
 
-h1 {
+.hero h1 {
     position: absolute;
     top: 20px;
     width: 100%;
@@ -185,7 +185,7 @@ article {
 .adventure img {
     display: block;
     max-width: 150px;
-    height: auto;
+    height: 100px;
     margin-bottom: 0;
 
 }
@@ -230,4 +230,158 @@ article {
     /* border: 1px solid black; */
 
 
+}
+
+form{
+    width: 842px;
+    margin: 0 auto;
+    padding: 0.5rem;
+    border: 2px solid black;
+    border-radius: 10px;
+    background-color: rgba(128, 128, 128, 0.562);
+    display: grid;
+}
+
+fieldset {
+    display: grid;
+    grid-gap: 0.3rem;
+    margin: 0.5rem;
+    border: none;
+    /* The above removed the border around the pool */
+    padding: 0.95rem;
+}
+
+
+fieldset legend {
+    color:black;
+    padding: 0.5rem;
+    font-size: 1em;
+    margin: 0 auto;
+}
+
+input,
+label,
+button,
+select,
+textarea {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+label {
+    /* text-align: right; */
+    padding-right: 1rem;
+    color: #000;
+}
+
+input,
+select,
+textarea {
+    padding: 0.3rem;
+    /* Note that the above padding is critical in order to 
+    provide spacing inside of the form input elements. */
+    font-size: 1.1rem;
+}
+input[type="checkbox"]
+
+/* The above is the best practice CSS selector for checkbox */
+    {
+    width: 20px;
+    height: 20px;
+    vertical-align: bottom;
+}
+button {
+    margin: 0 auto;
+    background-color: black;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    /* The above makes the border curve at the edges. */
+    padding: 0.5rem;
+    font-size: 20px;
+    width: 150px;
+    align-self: center;
+}
+
+button:hover {
+    background-color: grey;
+}
+input[type="radio"]
+{
+    width: 500px;
+    height: 10px;
+    align-self: center;
+}
+    
+.griding{
+    display: grid;
+    text-align: center;
+    
+}
+
+.column1 {
+    grid-template-columns: 3fr 1fr;
+    /* The above makes the label take 3X more space
+     than the second column */
+    margin: 0.5rem 0;
+    /* padding: 0.2rem; */
+}
+
+.column2 {
+    grid-template-columns: 1fr 2fr;
+    /* The above gives the label half the space as the input area */
+    margin: 0.5rem 0;
+}
+.row{
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-gap: 5px;
+    
+}
+.align{
+    margin: 0 auto;
+}
+
+.map{
+    border: 0;
+}
+
+.adventure2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    max-width: 1000px;
+    margin: 20px auto;
+    padding: 20px;
+}
+
+.adventure2 img {
+    display: block;
+    width: 150px;
+    height: 100px;
+    /* height: auto; */
+    /* margin-bottom: 0; */
+
+}
+
+.adventure2 p {
+    /* align-content: center; */
+    color: black;
+}
+
+.information{
+    max-width: 1000px;
+    border: 2px solid black;
+    border-radius: 10px;
+    background-color: rgba(128, 128, 128, 0.562);
+
+}
+.information h1{
+    color: black;
+    text-align: center;
+}
+
+.information p {
+    /* align-content: center; */
+    color: black;
+}
+.map{
+    padding-left: 25px;
 }
