--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -16,17 +16,16 @@ header {
     /* grid-gap: 30px; */
     padding: 0.5rem;
     max-width: 1000px;
-    align-items: center;
     border: 2px solid black;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
 
 
 }
 
 header img {
-    margin: 0 0.25rem 0 1rem;
+    margin: 0 0.25rem 0 6rem;
     width: 80px;
     height: auto;
     /* align-self: flex-end; */
@@ -37,23 +36,36 @@ header img {
 .navigation {
     display: flex;
     flex-wrap: wrap;
-    /* justify-content: center; */
+    justify-content: center;
     /* align-items: center; */
     font-family: Arial, sans-serif;
     flex-direction: row;
-
+    justify-content: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 .navigation a {
     display: block;
     color: navy;
-    padding: 10px;
     text-decoration: none;
-    font-size: 1rem;
+    font-size: 0.8rem;
     border: 1px solid black;
     background-color: white;
+    padding: 8px;
+    width: 90px;
+    height: 28px;
+    text-align: center;
+
+}
 
 
+
+.navigation a:hover {
+    color: tomato;
+    font-weight: 700;
+    text-decoration: underline;
 }
 
 * {
@@ -75,10 +87,10 @@ footer {
     margin: 0 auto;
 }
 
-h1,
+
 h2 {
     font-family: var(--heading-font);
-    color: var(--primary-color);
+    color: black;
 }
 
 nav,
@@ -109,7 +121,7 @@ article {
     text-align: center;
     opacity: 0.7;
     background-color: var(--accent1-color);
-    color: #ffff;
+    color: black;
 }
 
 article {
@@ -125,13 +137,16 @@ article {
     width: 140px;
 }
 
+.history{
+    border: 1px solid black;
+    max-width: 1000px;
+    margin: 20px auto;
+    padding: 20px;
+}
 .flex {
     display: grid;
     grid-template-columns: 1fr auto 1fr;
-    border: 1px solid black;
-    width: 800px;
     /* padding: 0.5rem; */
-    max-width: 1000px;
     /* align-items: center; */
 
 }
@@ -184,15 +199,18 @@ article {
 
 .adventure img {
     display: block;
-    max-width: 150px;
+    max-width: 120px;
     height: 100px;
     margin-bottom: 0;
 
 }
 
-.adventure p {
+.adventure figcaption {
     align-content: center;
     color: black;
+    padding: 10px;
+    margin: 10px;
+    
 
 }
 
@@ -228,10 +246,17 @@ article {
     padding: 1px;
     align-self: flex-end;
     /* border: 1px solid black; */
-
-
 }
 
+.socialmedia img {
+
+    width: 32px;
+    height: 32px;
+    margin: 10px;
+    /* padding: 20px; */
+    justify-self: flex-end;
+}
+    
 form {
     width: 842px;
     margin: 0 auto;
