--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #55C2AA;
+    --primary-color: #55c2aaa1;
     --secondary-color: #AE8CA3;
     --accent1-color: #A2ABB5;
     --accent2-color: #6DD6DA;
@@ -124,7 +124,7 @@ article {
     color: black;
 }
 
-article {
+.hero article {
     position: absolute;
     top: 280px;
     background-color: rgba(43, 61, 226, 0.295);
@@ -416,9 +416,166 @@ input[type="radio"] {
 .map {
     padding-left: 25px;
 }
-
 .moqup a {
     text-decoration: none;
     /* margin-right: 5px; */
 
+}
+
+.details{
+    border: 1px solid black;
+    max-width: 1000px;
+    background-color: #557bc23b;
+    /* margin: 20px auto; */
+
+}
+
+.details img{
+    display: block;
+    width: 150px;
+    height: 100px;
+    margin: 0 auto;
+}
+
+.details1{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 10px;
+    margin: 10px;
+}
+
+.details h1{
+    text-align: center;
+    color: #000;
+}
+
+.details p{
+    text-align: center;
+    color: #000;
+}
+
+.details figcaption{
+    color: #000;
+    margin: 0 auto;
+    padding: 0.3rem;    
+}
+
+.table{
+    position: relative;
+}
+.table img{
+    display: block;
+    width: 100%;
+    height: auto;
+    opacity: 0.6;
+    
+}
+
+.table div{
+    position: absolute;
+    top: 20px;
+    right: 50px;
+    margin: 40px;
+}
+
+table {
+  border-collapse: collapse;
+  border: 2px solid rgb(140 140 140);
+  font-family: sans-serif;
+  font-size: 0.8rem;
+  letter-spacing: 1px;
+  
+}
+
+caption {
+  caption-side: top;
+  padding: 10px;
+  font-weight: 1000;
+  font-size: large;
+  color: #000;
+  margin: 0 auto;
+}
+
+thead,
+tfoot {
+  background-color: rgb(228 240 245);
+}
+
+th,
+td {
+  border: 1px solid rgb(160 160 160);
+  padding: 8px 10px;
+  color: #000;
+  font-weight: 900;
+}
+
+td:last-of-type {
+  text-align: center;
+  color: #000;
+  font-weight: 900;
+}
+
+tbody > tr:nth-of-type(even) {
+  background-color: rgb(237 238 242);
+}
+
+
+thead th{
+    background-color: #000;
+    color: #fff;
+}
+
+.hero1 {
+    position: relative;
+}
+
+.hero1 img {
+    display: block;
+    width: 100%;
+    height: 800px;
+}
+
+.hero1 article img{
+    display: block;
+    width: 150px;
+    height: 100px;
+    margin-left: 100px;
+}
+.hero1 h1 {
+    position: absolute;
+    top: 20px;
+    width: 100%;
+    padding: 16px;
+    text-align: center;
+    opacity: 0.7;
+    background-color: var(--accent1-color);
+    color: black;
+}
+
+.hero1 article {
+    position: absolute;
+    top: 450px;
+    /* background-color: rgba(43, 61, 226, 0.295); */
+    display: grid;
+    grid-template-columns: 1fr 1fr 0.2fr;
+    grid-gap: 150px;
+    color: #ffff;
+}
+
+.hero1 p{
+    position: absolute;
+    top:400px;
+    background-color: #ffffff9a;
+    color:#000000;
+}
+
+.hero1 form{
+    position: absolute;
+    background-color: #ffffff91;
+    top: 120px;
+    border: none;
+}
+
+.hero1 article p{
+    top:120px;
 }
